# Noorfetch-Remake

./: Cargo.toml  LICENSE  README.md
binpkgs/rpm/: noorfetch-3.2.0-1.x86_64.rpm  secret.spec
src/: main.rs
src/functions/: ascii.rs  config.rs  date.rs  environment.rs  sysinfo.rs
